src/include/lem/solarix/solarix_grammar_engine.h


 typedef void* HFAIND;

 typedef void* HGREN_INTARRAY;

 typedef void* HGREN_WCOORD;

 typedef void* HGREN_RESPACK;

 typedef const void* HGREN_TREENODE;

 typedef void* HGREN_PHRASOMAT;

 typedef void* HGREN_SBROKER;




// Поиск связей в тезаурусе
FAIND_API(HGREN_INTARRAY) sol_SeekThesaurus(
                                            HGREN hEngine,
                                            int iEntry,
                                            int Synonyms,
                                            int Grammar_Links,
                                            int Translations,
                                            int Semantics,
                                            int nJumps
                                           );


// http://www.solarix.ru/api/ru/sol_GetProjCoordState.shtml
// Возвращается состояние грамматического признака CoordID у проекции Index
FAIND_API(int) sol_GetProjCoordState( HGREN hEngine, HGREN_WCOORD hList, int Index, int CoordID );



// http://www.solarix.ru/api/ru/sol_SyntaxAnalysis.shtml
// **************************************************************************
// Выполнение синтаксического анализа - на входе фраза, на выходе получается
// объект, хранящий альтернативные варианты построения синтаксического графа.
// Ряд функций работает с этим объектом, позволяя анализировать результаты.
// **************************************************************************
FAIND_API(HGREN_RESPACK) sol_SyntaxAnalysis(
                                            HGREN hEngine,
                                            const wchar_t *Sentence,
                                            int MorphologicalFlags,
                                            int SyntacticFlags,
                                            int Constraints,
                                            int Language
                                           );


// http://www.solarix.ru/api/ru/sol_DeleteResPack.shtml
// Удаление результатов морфологического или синтаксического анализа 
FAIND_API(void) sol_DeleteResPack( HGREN_RESPACK hPack );



// http://www.solarix.ru/api/ru/sol_CountGrafs.shtml
// Сколько альтернативных вариантов анализа фразы?  
FAIND_API(int) sol_CountGrafs( HGREN_RESPACK hPack );


// http://www.solarix.ru/api/ru/sol_CountRoots.shtml
// Сколько деревьев (узлов верхнего уровня) в заданном графе?
FAIND_API(int) sol_CountRoots( HGREN_RESPACK hPack, int iGraf );


// http://www.solarix.ru/api/ru/sol_GetRoot.shtml
// Получение указателя на заданный узел верхнего уровня 
FAIND_API(HGREN_TREENODE) sol_GetRoot( HGREN_RESPACK hPack, int iGraf, int iRoot );


// http://www.solarix.ru/api/ru/sol_CountLeafs.shtml
// Количество прикрепленных к данному узлу веток
FAIND_API(int) sol_CountLeafs( HGREN_TREENODE hNode );


// http://www.solarix.ru/api/ru/sol_GetLeaf.shtml
// Возвращает указатель на заданную ветку
FAIND_API(HGREN_TREENODE) sol_GetLeaf( HGREN_TREENODE hNode, int iLeaf );


// http://www.solarix.ru/api/ru/sol_GetNodeIEntry.shtml
// Возвращает индекс словарной статьи в узле
FAIND_API(int) sol_GetNodeIEntry( HGREN hEngine, HGREN_TREENODE hNode );


// http://www.solarix.ru/api/ru/sol_GetNodeContents.shtml
// Текстовое содержимое узла
FAIND_API(void) sol_GetNodeContents( HGREN_TREENODE hNode, wchar_t *Buffer );



FAIND_API(HGREN_SBROKER) sol_CreateSentenceBroker( HGREN hEngine, const wchar_t *Filename, const wchar_t *DefaultCodepage, int LanguageID );

FAIND_API(int) sol_FetchSentence( HGREN_SBROKER hBroker );

FAIND_API(void) sol_DeleteSentenceBroker( HGREN_SBROKER hBroker );
 #define sol_Tokenize sol_TokenizeW
 #define sol_Tokenize sol_TokenizeA




FAIND_API(int) sol_CountInts( HGREN_INTARRAY h );

FAIND_API(int) sol_GetInt( HGREN_INTARRAY h, int i );

FAIND_API(void) sol_DeleteInts( HGREN_INTARRAY h );