src/include/lem/SolarixEngineApi.pas


function sol_GetProjCoordState(
                               Engine: PInteger;
                               hCoordList: PInteger;
                               Index: Integer;
                               Coord: Integer
                              ): integer; stdcall; external 'faind.win32.dll' name 'sol_GetProjCoordState';




function sol_SyntaxAnalysis( Engine: PInteger; Sentence: PWideChar; Allow_Dynforms: LongBool; Allow_Unknown: LongBool ): PInteger; stdcall; external 'faind.win32.dll' name 'sol_SyntaxAnalysis';

procedure sol_DeleteResPack( hPack: PInteger ); stdcall; external 'faind.win32.dll' name 'sol_DeleteResPack';

function sol_CountGrafs( hPack: PInteger ): integer; stdcall; external 'faind.win32.dll' name 'sol_CountGrafs';

function sol_CountRoots( hPack: PInteger; iGraf: Integer ): integer; stdcall; external 'faind.win32.dll' name 'sol_CountRoots';

function sol_GetRoot( hPack: PInteger; iGraf: PInteger; iRoot: PInteger ): PInteger; stdcall; external 'faind.win32.dll' name 'sol_GetRoot';

function sol_CountLeafs( hNode: PInteger ): integer; stdcall; external 'faind.win32.dll' name 'sol_CountLeafs';

function sol_GetLeaf( hNode: PInteger; iLeaf: Integer ): PInteger; stdcall; external 'faind.win32.dll' name 'sol_GetLeaf';

function sol_GetNodeIEntry( Engine: PInteger; hNode: PInteger ): integer; stdcall; external 'faind.win32.dll' name 'sol_GetNodeIEntry';

procedure sol_GetNodeContents( hNode: PInteger; Buffer: PWideChar ); stdcall; external 'faind.win32.dll' name 'sol_GetNodeContents';

function sol_SeekThesaurus(
                           Engine: PInteger;
                           iEntry: Integer;
                           Synonyms: Integer;
                           Grammar_Links: Integer;
                           Translations: Integer;
                           Semantics: Integer;
                           nJumps: Integer
                          ): PInteger; stdcall; external 'faind.win32.dll' name 'sol_SeekThesaurus';

function sol_CreateSentenceBroker( Engine: PInteger; Filename: PWideChar; DefaultCodepage: PWideChar; Language: integer ): PInteger; stdcall; external 'faind.win32.dll' name 'sol_CreateSentenceBroker';
function sol_CreateSentenceBrokerMem( Engine: PInteger; Text: PWideChar; Language: integer ): PInteger; stdcall; external 'faind.win32.dll' name 'sol_CreateSentenceBrokerMem';
function sol_FetchSentence( hBroker: PInteger ): integer; stdcall; external 'faind.win32.dll' name 'sol_FetchSentence';
function sol_GetFetchedSentence( hBroker: PInteger; Buffer: PWideChar ): integer; stdcall; external 'faind.win32.dll' name 'sol_GetFetchedSentence';
procedure sol_DeleteSentenceBroker( hBroker: PInteger ); stdcall; external 'faind.win32.dll' name 'sol_DeleteSentenceBroker';

function sol_Tokenize( Engine: PInteger; Sentence: PWideChar ): PInteger; stdcall; external 'faind.win32.dll' name 'sol_Tokenize';

function sol_CountInts( hIntList: PInteger ): integer; stdcall; external 'faind.win32.dll' name 'sol_CountInts';
function sol_GetInt( hIntList: PInteger; i: Integer ): integer; stdcall; external 'faind.win32.dll' name 'sol_GetInt';
procedure sol_DeleteInts( hIntList: PInteger ); stdcall; external 'faind.win32.dll' name 'sol_DeleteInts';

function sol_CreatePhraseGenerator( hEngine: PInteger; ilang: integer ): PInteger; stdcall; external 'faind.win32.dll' name 'sol_CreatePhraseGenerator';
function sol_DeletePhraseGenerator( hBuilder: PInteger ): Integer; stdcall; external 'faind.win32.dll' name 'sol_DeletePhraseGenerator';

function sol_Paraphrase(
                        hBuilder: PInteger;
                        PhraseTypeFlags: Integer;
                        SyntaxAnalysisFlags: Integer;
                        NGramFlags: Integer;
                        ThesaurusFlags: Integer;
                        DebugFlags: Integer;
                        ResultsFormat: Integer;
                        MaxSubst: Integer;
                        OrgPhrase: PWideChar;
                        NewPhrase: PWideChar;
                        maxlen: Integer;
                        max_elapsed_msec: Integer
                       ): integer; stdcall; external 'faind.win32.dll' name 'sol_Paraphrase';



function sol_StopSynonyms( hBuilder: PInteger {HGREN_PHRASOMAT}; n: integer; words_ie: PInteger; use_thesaurus: Integer ): integer; stdcall; external 'faind.win32.dll' name 'sol_StopSynonyms';
function sol_SetWordsForPhrase( hBuilder: PInteger {HGREN_PHRASOMAT}; n: integer; words_ie: PInteger; use_thesaurus: Integer ): integer; stdcall; external 'faind.win32.dll' name 'sol_SetWordsForPhrase';
function sol_Set2GramsForPhrase( hBuilder: PInteger {HGREN_PHRASOMAT}; npairs: integer; words_ie: PInteger ): integer; stdcall; external 'faind.win32.dll' name 'sol_Set2GramsForPhrase';
function sol_GeneratePhrase( hBuilder: PInteger {HGREN_PHRASOMAT}; PhraseType: integer; DebugFlags: Integer ): PWideChar; stdcall; external 'faind.win32.dll' name 'sol_GeneratePhrase';
function sol_GeneratePhrase2( hBuilder: PInteger {HGREN_PHRASOMAT}; PhraseType: integer; DebugFlags: Integer; Buffer: PWideChar; maxlen: Integer ): integer; stdcall; external 'faind.win32.dll' name 'sol_GeneratePhrase2';
function sol_DeleteGeneratedPhrase( Phrase: PWideChar ): integer; stdcall; external 'faind.win32.dll' name 'sol_DeleteGeneratedPhrase';
procedure sol_RandomizePhraseGenerator( hBuilder: PInteger {HGREN_PHRASOMAT} ); stdcall; external 'faind.win32.dll' name 'sol_RandomizePhraseGenerator';
function sol_LoadKnowledgeBase( hBuilder: PInteger {HGREN_PHRASOMAT}; FolderPath: PWideChar ): integer; stdcall; external 'faind.win32.dll' name 'sol_LoadKnowledgeBase';
function sol_BuildKnowledgeBase( hEngine: PInteger {HFAIND}; DocumentsFolder: PWideChar; DestinationFolder: PWideChar; LanguageId: Integer; Flags: Integer ): integer; stdcall; external 'faind.win32.dll' name 'sol_BuildKnowledgeBase';


function sol_Seek2Gram( Engine: PInteger; Flags: Integer; Word1: PWideChar; Word2: PWideChar; ): Integer; stdcall; external 'faind.win32.dll' name 'sol_Seek2Gram';
function sol_Seek3Gram( Engine: PInteger; Flags: Integer; Word1: PWideChar; Word2: PWideChar; Word3: PWideChar; ): Integer; stdcall; external 'faind.win32.dll' name 'sol_Seek3Gram';
function sol_Seek4Gram( Engine: PInteger; Flags: Integer; Word1: PWideChar; Word2: PWideChar; Word3: PWideChar; Word4: PWideChar; ): Integer; stdcall; external 'faind.win32.dll' name 'sol_Seek4Gram';
function sol_Seek5Gram( Engine: PInteger; Flags: Integer; Word1: PWideChar; Word2: PWideChar; Word3: PWideChar; Word4: PWideChar; Word5: PWideChar; ): Integer; stdcall; external 'faind.win32.dll' name 'sol_Seek5Gram';


implementation

end.

